2010-10-10  Alex Schroeder  <alex@gnu.org>

	* modules/gravatar.pl (GravatarNewGetSummary): New; strip gravatar
	link from comment summary.

	* wiki.pl (GetSummary): Fix remaining closing square bracket.

2010-09-21  Alex Schroeder  <alex@gnu.org>

	* modules/bbcode.pl (bbCodeRule): Fix [/code] handling.

2010-09-10  Alex Schroeder  <alex@gnu.org>

	* wiki.pl (RequestLockDir): Don't enter an infinite loop of trying
	requesting a lock and trying to unlock. Unlocking can fail if the
	permissions are wrong, for example (user running the script
	changed, for example).

2010-08-14  Alex Schroeder  <alex@gnu.org>

	* rc2mail.pl (send_mail): Introduced new -q flag and print
	confirmation message unless the quiet flag is used.

2010-05-17  Alex Schroeder  <alex@gnu.org>

	* modules/load-lang.pl: Prepend instead of append to
	MyInitVariables to get rid of a conflict with gotobar.pl.

2010-05-14  Alex Schroeder  <alex@gnu.org>

	* modules/svg-edit.pl (NewSvgGetDownloadLink): Show older
	revisions, too. Work when included in [[image:foo]] links.
	(DoSvg): Enable translation of the prompt. Bypass Questionasker by
	default.
	(DoSvg, NewSvgGetEditForm): Allow editing older revisions.
	(DoSvg): Make the sidebar invisible, if
	necessary.

2010-05-13  Alex Schroeder  <alex@gnu.org>

	* modules/svg-edit.pl (DoSvg): Add Javascript to override the save
	functionality. It includes an encode64 function, a new save
	handler, and some init code, and initialize the image.

2010-05-11  Alex Schroeder  <alex@gnu.org>

	* modules/svg-edit.pl (DoSvg): Add URL of the SVG so that you can
	edit images if the image URL (on the wiki) is reachable by the
	editor (defaulting to Google).

2010-05-07  Alex Schroeder  <alex@gnu.org>

	* modules/namespaces.pl (DoNamespacesList): Fix the links to
	namespaces.

2010-04-21  Alex Schroeder  <alex@gnu.org>

	* wiki.pl (StripRollbacks): Strip remaining chunk of the log if we
	found an unfinished [[rollback]] section.
